# SDL3Lite

./: App.c  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GL1_Tetrahedron.c  GL1_Tetrahedron.cpp  GL1_Triangle.c  GL1_Triangle.cpp  GL3_Triangle.cpp  Multiple.c  Multiple.cpp  OpenGL.h  OpenGL1.c  README.md  Rects.c  Rects.cpp  Renderer.c  Renderer.cpp  Software.c  Tests.cpp  Textures.c  Textures.cpp  Window.c  Window.cpp  clear.c  lines.c  main.c  primitives.c  rectangles.c  tests.cpp  textures2.c
Arcanum/Arcanum/: Convert.cpp  Convert.hpp  Engine.cpp  Engine.hpp  FpsCounter.cpp  FpsCounter.hpp  SpriteManager.cpp  SpriteManager.hpp  main.cpp
backends/dos16/: arcanum_dos16.c  audio_dos16.c  graphics_dos16.c  input_dos16.c
containers/: arc_string.h  arc_vector.h
core/: arcanum.h
dependencies/: OpenGL.h
dependencies/simplebmp/: simplebmp.cpp
include/SDL3/: Error.h  Events.h  FileSys.h  IOStream.h  Init.h  Loadso.h  Log.h  Mouse.h  Pixels.h  Point.h  Rect.h  Render.h  SDL.h  SDL_AppResult.h  SDL_Bmp.h  SDL_Color.h  SDL_Errors.h  SDL_Events.h  SDL_GLContext.h  SDL_InitFlags.h  SDL_Initialize.h  SDL_Log.h  SDL_Palette.h  SDL_Point.h  SDL_Rect.h  SDL_Renderer.h  SDL_SharedObject.h  SDL_Surface.h  SDL_Texture.h  SDL_Timer.h  SDL_Types.h  SDL_Window.h  SDL_error.h  SDL_filesystem.h  SDL_init.h  SDL_iostream.h  SDL_loadso.h  SDL_main.h  SDL_pixels.h  SDL_render.h  (+14 more)
include/SDL3Lite/: Application.hpp  BaseWindow.hpp  BmpLoader.hpp  Color.hpp  IRender.hpp  ITexture.hpp  IWindow.hpp  OpenGLAttributes.hpp  RenderCreator.hpp  Result.hpp  RingBuffer.hpp  Surface.hpp  SurfaceCreator.hpp  TextureCreator.hpp  Vec2.hpp  WindowCreator.hpp
include/SDL3Lite/OpenGL/: GLUtils.hpp  Mat4f.hpp
include/SDL3Lite/Renders/OpenGL1/: OpenGL.h  OpenGL1Render.hpp  OpenGL1Texture.hpp
include/SDL3Lite/Renders/Software/: SoftwareRender.hpp
include/SDL3Lite/SDL3/: SDL_Bmp.hpp  SDL_Renderer.hpp  SDL_Surface.hpp  SDL_Texture.hpp  SDL_Window.hpp
make/: BuildExamples.bat  OpenWatcomWin16.bat  OpenWatcomWin32.bat  VC6_Build_Arcanum.bat  VC6_Build_DLL.bat  VC6_Build_EXE.bat  del.bat  msvc.bat  tcc3.bat  tcpp10.bat
source/OpenGL/: GLUtils.cpp  Mat4f.cpp
source/Renders/OpenGL1/: OpenGL1Render.cpp  OpenGL1Texture.cpp
source/Renders/Software/: PixelCopier.cpp  PixelPainter.cpp  SoftwareRender.cpp  SurfaceRender.cpp
source/SDL3/: SDL_Bmp.cpp  SDL_Errors.cpp  SDL_Events.cpp  SDL_Initialize.cpp  SDL_Log.cpp  SDL_OpenGLContext.cpp  SDL_Renderer.cpp  SDL_SharedObject.cpp  SDL_Surface.cpp  SDL_Texture.cpp  SDL_Window.cpp  SDL_stdinc.cpp
source/SDL3Lite/: AppMetaData.cpp  AppMetaData.hpp  Application.cpp  Application.hpp  BaseWindow.cpp  BaseWindow.hpp  Bmp.cpp  Bmp.hpp  BmpLoader.cpp  BmpLoader.hpp  Color.hpp  Errors.cpp  Errors.hpp  EventHandler.hpp  Events.cpp  Events.hpp  FileStream.hpp  IOStream.cpp  IOStream.hpp  Initialize.cpp  Log.cpp  New.cpp  New.hpp  OpenGLAttributes.cpp  OpenGLAttributes.hpp  OpenGLContext.cpp  OpenGLContext.hpp  Palette.cpp  Palette.hpp  PixelCopier.cpp  PixelCopier.hpp  PixelPainter.cpp  PixelPainter.hpp  Pixels.cpp  Pixels.hpp  Rect2f.cpp  Rect2f.hpp  Renderer.cpp  Renderer.hpp  Result.cpp  (+16 more)
source/SDL3Lite/OpenGL/: GLUtils.cpp  GLUtils.hpp  Mat4f.hpp
source/SDL3Lite/Renders/OpenGL1/: OpenGL1Render.hpp  OpenGL1Texture.cpp  OpenGL1Texture.hpp
source/SDL3Lite/Renders/Software/: SoftwareRender.hpp  SoftwareTexture.cpp  SoftwareTexture.hpp  (+2 more)
source/Shared/: AppMetaData.cpp  Application.cpp  BaseWindow.cpp  BmpLoader.cpp  Color.cpp  EventHandler.cpp  FileStream.cpp  OpenGLAttributes.cpp  PixelCopier.cpp  PixelPainter.cpp  Rect2f.cpp  RenderCreator.cpp  Result.cpp  Surface.cpp  SurfaceCreator.cpp  TextureCreator.cpp  Vec2.cpp  WindowCreator.cpp
source/include/SDL3Lite/: AppMetaData.hpp  Application.hpp  Color.hpp  EventHandler.hpp  FileStream.hpp  Palette.hpp  PixelPainter.hpp  Rect2f.hpp  SDL_Renderer.hpp  SDL_Surface.hpp  SDL_Texture.hpp  SDL_Window.hpp  Surface.hpp  Vec2.hpp
src/SDL3/: Accel.hpp  App.cpp  App.hpp  AppMeta.cpp  AppMeta.hpp  BaseRndr.cpp  BaseRndr.hpp  BaseWin.cpp  BaseWin.hpp  Bmp.cpp  Bmp.hpp  BmpLoad.cpp  BmpLoad.hpp  Color.cpp  Color.hpp  Errors.cpp  Errors.hpp  EventH.cpp  EventH.hpp  EventQ.cpp  EventQ.hpp  Events.cpp  Events.hpp  GLAttr.cpp  GLAttr.hpp  GLCntxt.cpp  GLCntxt.hpp  GLWin.hpp  IOStream.cpp  IOStream.hpp  Init.cpp  Library.hpp  Log.cpp  MainWin.hpp  MemMngr.cpp  MemMngr.hpp  New.cpp  New.hpp  Palette.cpp  Palette.hpp  (+38 more)
src/SDL3/Dos16/: Accel.cpp  Accel.hpp  GLWin.cpp  GLWin.hpp  Library.cpp  Library.hpp  MainWin.cpp  MainWin.hpp  SoftWin.cpp  SoftWin.hpp  Timer.cpp
src/SDL3/OpenGL/: GLUtils.cpp  GLUtils.hpp  Mat4f.hpp
src/SDL3/Unix/: Accel.cpp  Accel.hpp  GLWin.cpp  GLWin.hpp  Library.cpp  Library.hpp  MainWin.cpp  MainWin.hpp  SoftWin.cpp  SoftWin.hpp  Timer.cpp
src/SDL3/Win32/: Accel.cpp  Accel.hpp  GLWin.cpp  GLWin.hpp  Library.cpp  Library.hpp  MainWin.cpp  MainWin.hpp  SoftWin.cpp  SoftWin.hpp  Timer.cpp  Win32.hpp  WinError.cpp  WinError.hpp
(+19 files in other folders)
